Bug 7844 - ext3 with data=journal hangs when running fsx-linux
Summary: ext3 with data=journal hangs when running fsx-linux
Status: CLOSED CODE_FIX
Alias: None
Product: File System
Classification: Unclassified
Component: ext3 (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Andrew Morton
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-01-17 09:48 UTC by Randy Dunlap
Modified: 2007-01-27 04:41 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.20-rc2 thru -rc5
Tree: Mainline
Subsystem:
Regression: ---


Attachments

Description Randy Dunlap 2007-01-17 09:48:17 UTC
Most recent kernel where this bug did *NOT* occur:  2.6.20-rc1
Distribution:  openSUSE 10.2
Hardware Environment:  x86_64 AMD64 single-CPU, 1 GB RAM
Software Environment:  SMP kernel
Problem Description:  ext3 data=journal hangs, other journal modes run OK.

Steps to reproduce:  mkfs.ext3, mount with -o data=journal, run fsx-linux

config:  http://oss.oracle.com/~rdunlap/kerneltest/configs/config-2620-rc4-hangs
msg log:  http://oss.oracle.com/~rdunlap/kerneltest/logs/fsx-capture.txt
Comment 1 Adrian Bunk 2007-01-18 01:09:31 UTC
Does it also happen with 2.6.19.2?

There weren't any ext3 changes between 2.6.20-rc1 and 2.6.20-rc2, and the most
prominent filesystem related change was the file corruption fix.

Your log also contains ACPI error messages and
[ 3603.375828] warning: many lost ticks.
[ 3603.375830] Your time source seems to be instable or some driver is hogging
interupts
[ 3603.387303] rip __do_softirq+0x4b/0xc7

Does a diff between the 2.6.20-rc1 and the 2.6.20-rc2 dmesg tell that any of
them were new in -rc2?
Comment 2 Randy Dunlap 2007-01-18 10:09:38 UTC
2.6.19.2 runs with no problems.

I would be suspecting changes in mm/ rather than in fs/ext3/.

The lost ticks are not new in 2.6.20-rc2.  I see them in all of these:
2.6.19
2.6.19.2
2.6.20-rc1
2.6.20-rc2
2.6.20-rc4
2.6.20-rc5
Comment 3 Randy Dunlap 2007-01-25 08:59:05 UTC
fsx-linux options:  -l 100M -N 500000 -S 0 /mountpoint/fsxtextfile
Comment 4 Adrian Bunk 2007-01-27 04:41:01 UTC
Fix is in Linus' tree.

Note You need to log in before you can comment on or make changes to this bug.